1998-06-18  Stefan Taferner  <taferner@kde.org> (KMail-0.7.5)

	* Reader: removed ':' from the characters that mark
	quoted text to catch smileys at the beginning of the
	line ;-)

	* Main window configuration (geometry, etc.) is now
	stored again.

	* Composer: changed completion key from Ctrl-. to Ctrl-T
	as kfile has.

1998-06-18  Mario Weilguni   <mweilguni@kde.org>

	* Dialog for folder selection: Escape now closes dialog,
	remembers last folder, has a default pushbutton

1998-06-17  Stefan Taferner  <taferner@kde.org> (KMail-0.7.4)

	* Message-list: now the first unread/new message is
	displayed when opening a folder.

	* Message-status: now messages change status from
	"new" to "unread" when the user changes folder (and
	not when the folder is closed somewhere within KMail).

	* Reader: worked around problem of current HTML widget
	with long lines (without '\n')

1998-06-16  Stefan Taferner  <taferner@kde.org> (KMail-0.7.3)

	* Headers: Improved switching between folders to do
	less paints to avoid flickering where possible.

	* Warnings: changed warning messages of QPixmap and
	QPainter to debug messages to avoid lots of message
	boxes from broken KToolbar code when changing color 
	scheme.

	* Composer (email-address-completion)
	Changed email-address completion to be case insensitive.
	I think this is more useful in the general case.

	* Composer: fixed broken Tab handling. Replaced
	Tab-completion in the email-address header lines 
	(To, From, Cc, etc.) with Ctrl-. completion.

	* Filters: removed some debug statements that slowed
	down filtering a lot.

	* kmmsgbase.cpp: added isUnread() method.

	* Message-list: improved next/prev_unread_message methods.
	Improved code that ensures that current item is visible
	and added it to several places in the headers code.

1998-06-15  Stefan Taferner  <taferner@kde.org>

	* kmfilteraction.cpp (process): Removed patch for kmfilter
	action "Move" of 1998-06-14.
	Fixed bug in kmfilteraction "Move" action.
